# qudotvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bytecodes.h  common.h  qudotconfig.h  quworld.h
include/qudot/: bytecodes.h  common.h  fenwicktree.hpp  gatestackframe.h  kratosvm.h  measurable.h  qudot.h  qudotconfig.h  qudotvm.h  qufrequency.h  qumvn.h  qureg.h  quworld.h
include/qudot/components/: eprunit.h  feynmanunit.h  heisenbergunit.h  mwlu.h  thanosunit.h
include/qudot/gates/: H.h  R.h  X.h  Y.h  qugate.h
include/qudot/intrinsics/: comparator.h  fulladder.h  qft.h  qftinv.h
src/: bytecodes.cpp  common.cpp  gatestackframe.cpp  kratosapp.cpp  kratosvm.cpp  qudotapp.cpp  qudotconfig.cpp  qudotvm.cpp  qufrequency.cpp  qumvn.cpp  qureg.cpp  quworld.cpp  scalemem.cpp
src/components/: eprunit.cpp  feynmanunit.cpp  heisenbergunit.cpp  mwlu.cpp  thanosunit.cpp
src/gates/: H.cpp  R.cpp  X.cpp  Y.cpp  qugate.cpp
src/intrinsics/: comparator.cpp  fulladder.cpp  qft.cpp  qftinv.cpp
test/: CMakeLists.txt  addertest.cpp  basicmeasurementtest.cpp  bytecodestest.cpp  coherentmeasurementtest.cpp  fenwicktreetest.cpp  iqfttest.cpp  mwlutest.cpp  qftintrinsicstest.cpp  qfttest.cpp  qudottest.cpp  qufrequencytest.cpp  quworldtest.cpp  run_tests.sh  shortest.cpp  swaptest.cpp  test1.cpp  testmain.cpp  thanostest.cpp  toffolitest.cpp
test/include/: qudottest.h  qudottest.hpp
test/resources/compiled/adder/: fullAdder1.qudotc  fullAdder2.qudotc  fullAdder3.qudotc  fullAdder4.qudotc
test/resources/compiled/coherent/: cnotState1.qudotc  cnotState2.qudotc  cohQft24.qudotc  crotState1.qudotc  semiCnotState3.qudotc  semiCrotState1.qudotc
test/resources/compiled/iqft/: iqft12.qudotc  iqft13.qudotc  iqft14.qudotc  iqft23.qudotc  iqft24.qudotc  iqft34.qudotc  iqft34Intrinsic.qudotc
test/resources/compiled/measurements/: cohQft24.qudotc  state10.qudotc  state2.qudotc  state3.qudotc  state4.qudotc  state5.qudotc  state6.qudotc  state7.qudotc  state8.qudotc  state9.qudotc  state_call.qudotc  state_labels.qudotc
test/resources/compiled/mwlu/: addModN1.qudotc  addModN2.qudotc  addModN3.qudotc  addModN4.qudotc  addModN5.qudotc  addModN6.qudotc  ctrlAddModN2.qudotc  ctrlAddModN3.qudotc  mulModN1.qudotc  mulModN2.qudotc  mulModN3.qudotc  mulModN5.qudotc
test/resources/compiled/qft/: qft12.qudotc  qft13.qudotc  qft14.qudotc  qft23.qudotc  qft24.qudotc  qft34.qudotc  qft34Intrinsic.qudotc
test/resources/compiled/shor/: shor15.qudotc  shor21.qudotc  shor33.qudotc  shor35.qudotc  shor77.qudotc
test/resources/compiled/swap/: iqft34_full_swap.qudotc  qft24_swap1.qudotc  swap1.qudotc  swap2.qudotc
test/resources/compiled/toffoli/: toff1.qudotc  toff2.qudotc  toff3.qudotc
